--- a/ftp/Dockerfile
+++ b/ftp/Dockerfile
@@ -23,7 +23,7 @@ ENV FTP_USER **String**
 ENV FTP_PASS **Random**
 ENV PASV_ADDRESS **IPv4**
 ENV PASV_ADDR_RESOLVE NO
-ENV PASV_ENABLE YES
+ENV PASV_ENABLE NO
 ENV PASV_MIN_PORT 21100
 ENV PASV_MAX_PORT 21110
 ENV XFERLOG_STD_FORMAT NO
